# markmail

./: .gitignore  .prettierignore  .prettierrc  CLAUDE.md  DEVELOPMENT.md  PROGRESS.md  README.md  REQUIREMENTS.md  ROADMAP.md  docker-compose.yml  env.example  lefthook.yml  package-lock.json  package.json  sfdx-project.json  test_dummy_file.md
backend/: .env.example  Cargo.toml  Dockerfile  Dockerfile.dev  refresh_sf_token.sh  run-dev.sh  rustfmt.toml  test_campaign_send.sh  test_email.sh  watch.sh
backend/.sqlx/: query-01b54620f08179531eea7659fe3e71df7c9b08f53fe48dc66f480e55dc263077.json  query-01f38ef11efcff00b1b68098939ed1c8529398c701c6e574eb6dd114e3f65eaf.json  query-028cbd2ed2899d08b70be3b8e8be4ef7e0cc10e1a2fa992d3a0dd3d704625259.json  query-043b8a411ceea7689ae7f3e9fd4de46900fb9d72987b888e98c061f53941c13b.json  query-0447f274785515567010431aaeb84b8818edafc9ebc49cedbcbbb3b17635b8f4.json  query-0961b8c0721acdbbfd870506fe3b33d7816daff3ce57b8ded1f98e7872ced29f.json  query-0b5d3afcc68e7f4b4ddb933e433586ff832e7269082a94b9d55efeb6b7ba3c94.json  query-13702e5bff91fdc196b6bb49812c071c03410a715d1d1eade948fb03b30c5c20.json  query-150a84d9a1a15e81365d638257623d7784c5ab4d584090071d56044dcec7d05a.json  query-17b67aab72a89a1efe50e768b95e70e15e63c17f24fbaaf4d2fa0bc7a666903d.json  query-19826d8e1172c5314e2169b7d1dabd12f7022ad8991a282ad10c62f3acd9bbd3.json  query-1d0fcd1f3412ec56cb7a926f7093c632c5b7b24efdbf43d27e640232c2fd1b73.json  query-1dd6cd3f074defc8ee1f9d1a71827001e44e16d20696b9769e58af6510127357.json  query-1e58567ec3d5eaeb4d7fef40f1cbf0621ce39962e6c26d4df0320b8d5192728c.json  query-1f70da5fd7802d99157e0b0509db119153751e86ce382a9420efa7e4cc975335.json  query-205c7e6973351deadfa2249055f70b591681641e303849bc07cacd79c93e47fa.json  query-20e4f7aba9c4cbf690658c2e913b913051ddb58620e2fc022fb5aae5c410ce01.json  query-26706f6a35cac187c92e4938d6ee0cc78f573d87acd9861450f0129c34a84e56.json  query-27001565b96d5a4ffee09d2fb86c8c784bd780f29b1239ea2509ab58bac32412.json  query-27209affca79ca24e1ac26327cca199bef32006d158fbc85e19ea86604e782eb.json  query-2e1dcfb0c2017a28076aa94112779f690f3027f7f64e65ae82ce49a2d4c39e28.json  query-2fc2182fdfab9615472d943a9d14af84410b82efd43734d042e8523ede3dda4b.json  query-31470fe5196641fefffcb8eff15ac37f64ffcd0cf3c21b66b73bbca48dc0642b.json  query-3998995cdfa5b06e2997f648aaff8a5e9820d3bb93a8549db5ac1888f1d17e54.json  query-3a29783cc2d87706213df584aebae40c523c3f43e79dff1156f454bcca9902f3.json  query-3adee939a6919f07ae675e62bd1a02f3e8d2408956105788e303c0839e72554e.json  query-3d175015878c5913337a9e4680c7c19643bb0599ec5b4c695810c85eba4d99e1.json  query-3ed98c34d94c2c43725171d78051462d28b073273150d326b95cefab9378ee8b.json  query-400cbed8167e974677939a58697076daea0b1df06b8da8f6522ae5df18fc9e7f.json  query-4149df159538156bacc6692a4310087cb90e28c200968d4207f5f4bbb448c058.json  query-4746b1f7734e246cc7e9fde1d864e2e2c3eb4b7f836786c1e1ca123f2270c08d.json  query-49130a48f0732cc616e11024f9364a2f37677505414912e92fee77f470592e11.json  query-4b781fc0de91262d57ab43e68ccb885911cb30eb3e60b55fa5cc98f8c20cf815.json  query-4c669a4f72d310b9275d7a36d94761f1043777b6a1de14359dda980bf5f0c70e.json  query-4dbacc275de543b0d5f1eb2f20ac2243b33adf906145e0d4a06e8a51b08ea2a8.json  query-4e5286c102f984c094918106d47e1b8031c9969d98fe1e1aad75bb81550aef56.json  query-4fa8ea454f8513a3c103b76e73ec6aa4429e4e461070c0b17941811002740877.json  query-51ba17f40573f8680a8fd2476a24fe87d98ec682d05e926383a9efbd43f326c9.json  query-5260decd5c921f02a60b928a01310abd03edd973a4e3498a6f991152e0b6c7ab.json  query-545ee1ecb9a1c71002c8a105ccfde55dd1139452aee7914cf63df5631169ceb5.json  (+81 more)
backend/migrations/: 20250602114205_create_users_table.sql  20250602114236_create_refresh_tokens_table.sql  20250603113821_create_templates_table.sql  20250607094209_create_campaigns_table.sql  20250607094210_alter_campaigns_status_to_text.sql  20250607120000_create_subscribers_table.sql  (+12 more)
backend/src/: lib.rs  main.rs
(+330 files in other folders)
